# qr-checkin

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: c18d5df95868_add_scanner_key_to_events.py  ccc9367b73c4_init_tables.py
app/: main.py
app/api/: __init__.py  deps.py
app/api/routes/: __init__.py  attendees.py  auth.py  checkin.py  events.py  me.py  scanner.py  stats.py
app/core/: config.py  security.py
app/db/: base.py
app/models/: __init__.py  attendee.py  event.py  user.py
app/schemas/: attendee.py  checkin.py  event.py  scanner.py
app/services/: qr.py  scanner_key.py
app/tests/: test_attendees.py  test_auth.py  test_checkin.py  test_events.py  test_health.py  test_scanner_key.py
qr_checkin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web/: scanner.html
